Fix deprecated API usage warnings. Upgrade libs versions